plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1'

bootJar {
    archiveBaseName = 'demo'
    archiveVersion = ''
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    runtimeOnly 'org.postgresql:postgresql'
    implementation 'io.lettuce:lettuce-core:6.5.1.RELEASE'

    implementation 'org.apache.commons:commons-lang3:3.17.0'
    implementation 'org.apache.commons:commons-collections4:4.5.0-M3'
    implementation 'org.apache.commons:commons-text:1.13.0'
    implementation 'org.apache.commons:commons-compress:1.27.1'
    implementation 'org.apache.commons:commons-csv:1.12.0'
    implementation 'commons-codec:commons-codec:1.17.2'
    implementation 'org.apache.poi:poi-ooxml:5.3.0'
    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2'
    implementation 'com.auth0:java-jwt:4.4.0'
    implementation('commons-validator:commons-validator:1.9.0') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    implementation 'com.github.pjfanning:excel-streaming-reader:5.0.3'
    implementation 'org.dhatim:fastexcel:0.18.4'
    implementation 'org.dhatim:fastexcel-reader:0.18.4'
    implementation 'com.atlassian:onetime:2.1.2'

    compileOnly 'org.projectlombok:lombok'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

//tasks.named('test') {
//    useJUnitPlatform()
//}
